<?xml version="1.0"?>
<package format="2">
  <name>global_path_search</name>
  <version>0.0.0</version>
  <description>The global_path_search package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
